--- a/blog/posts/invasive_species_dashboard_report/index.qmd
+++ b/blog/posts/invasive_species_dashboard_report/index.qmd
@@ -3,6 +3,7 @@ title: "Invasive Animal Species Dashboard"
 description: "University Assignment: Developing an RShiny dashboard to visualise invasive animal species in Australia"
 author: "Johann Wagner"
 date: "2023-10-20"
+date-modified: "2025-02-25"
 categories:
   - "Data Projects"
   - "Exploratory Data Analysis"
