Update about me

--- a/index.qmd
+++ b/index.qmd
@@ -35,9 +35,10 @@ I'm a Data Scientist working at [Jobs and Skills Australia](https://www.jobsands
   - Open Science
   
 - **Endurance sports 🚲**
-  - Adventure Racing
-  - Mountain Biking
   - Bikepacking
+  - Adventure Racing
+  - Trail Running
+
 
 - **Data-driven solutions 📊** 
   - Economic Modelling
@@ -47,9 +48,9 @@ I'm a Data Scientist working at [Jobs and Skills Australia](https://www.jobsands
 ---
 
 ##### 📈 My Broad Goals:
-- Embrace **quality time spent with friends and family** enjoying the fun adventures 😋
+- Embrace **quality time spent with friends and family** enjoying fun adventures 😋
 - Navigate the vast data role ecosystem and try and **figure out where I best fit in** 💻
-- Immerse myself in the data science community by **sharing my data projects** on my website and on LinkedIn ✏️
+- Immerse myself in the data community by **sharing my projects** ✏️
 - **Contribute to open source** software and promote Open Science! 🧪
 
 ---
@@ -84,7 +85,7 @@ This website was built using [Quarto](https://quarto.org/).
 
 The source code can be found on my [GitHub](https://github.com/johann-wagner/johann-wagner.github.io).
 
-I'd like to thank [Marvin Schmitt](https://www.marvinschmitt.com/blog/website-tutorial-quarto/), [Melissa Van Bussell](https://youtu.be/nuYNCPRf8Js?si=mL9L7ic3PdJcs5C7), [Samantha Csik](https://ucsb-meds.github.io/creating-quarto-websites/#fa-edit-titlepencil-and-paper-where-you-should-start-changing-stuff) for their tutorials on how to build a website using Quarto. Their clarity of instructions made it easy for me to build this website and **encourage you to check out their work.**
+Thanks to [Marvin Schmitt](https://www.marvinschmitt.com/blog/website-tutorial-quarto/), [Melissa Van Bussell](https://youtu.be/nuYNCPRf8Js?si=mL9L7ic3PdJcs5C7), [Samantha Csik](https://ucsb-meds.github.io/creating-quarto-websites/#fa-edit-titlepencil-and-paper-where-you-should-start-changing-stuff) for their tutorials on how to build a website using Quarto. Their clarity of instructions made it easy to build this website. I encourage you to check out their work. [Quarto](https://quarto.org/docs/websites/) also has some great documentation.
 
 ---
 Thanks for reading until the end. 💅💅💅
