--- a/blog/bikepacking_attack_of_the_buns/index.qmd
+++ b/blog/bikepacking_attack_of_the_buns/index.qmd
@@ -13,14 +13,14 @@ categories:
 
 [Attack of the Buns](https://bikepacking.com/routes/attack-of-the-buns/).... Or perhaps this blog post should be called Attack of the Braids, because we began the adventure from Braidwood, instead of the usual start in Bungendore. This blog post is all about my recent bikepacking trip in early 2025. We started in Bungendore travelling through Morton National Park past Nowra and Kangaroo Valley finishing in Moss Vale.
 
-# Day 0: Car Logistics
+## Day 0: Car Logistics
 The trip "began" after work on a Wednesday afternoon. The plan was for Robin and I to drive separately from Canberra to Moss Vale. We would then *"scissors, paper, rock"* to determine whose car would be left in Moss Vale, then grab Subway and back home. With our bikes and gear now all packed in the car, it was time for an early nights sleep.
 
 The plan from here would be to drive to Braidwood, then cycle across 4 days back to the car in Moss Vale and then collect the other car in Braidwood and head back to Canberra. The alternatives would have been getting someone to pick us up from Moss Vale or catching the train back to Canberra. Having overestimated our bikepacking speed in the past, the convenience of having our own transportation post-bike leg was very worth the Wednesday evening effort.
 
-# Day 1: Braidwood to Piercys Clearing
+## Day 1: Braidwood to Piercys Clearing
 
-## The Bike Pump...
+### The Bike Pump...
 Today was the first day where (almost) everything went to plan - unfortunately a rariety in my bikepacking career so far.
 
 Awake and ready to start the day, we would make our way straight to [Braidwood Bakery](https://braidwoodbakery.com.au/)[^1]. The bikes and bags are now fully setup and we've taken our first of many 10 second self-timer photos. Robin wants to quickly pump up his tires before we hit the gravel. To our surprise, I realise that I had forgotten to bring the valve adaptor for our pump[^2].
@@ -38,26 +38,26 @@ In a worried manner, we push our bikes through town asking shopkeepers if they s
 
 We strap it onto my front handle bars with some spare straps I brought (a reminder to always bring some spare straps!).
 
-## Pumped up, let's go, off to Nerriga Pub!
+### Pumped up, let's go, off to Nerriga Pub!
 And off we go having already problem solved, we jump onto Little River Road leading onto Charleys Forest Road off to Nerriga. The gravel was smooth and slightly undulating. Complimented by a cool misty morning, we were flying past grazing cattle, calm creek crossings, and a peaceful snake enjoying the warm road! 
 
 With the sun starting to break through the clouds, arriving at Nerriga was a lifesaver from the incoming onslaught of the heat. Excited to down a celebratory pint of Carlton Draught and a pub feed, we were greeted by two confused looking locals joking they would have preferred taking their motorbikes instead of bicycles. I followed with a slight nod and a chuckle, as I gazed over to see another bikepacker enjoying the shade. Not able to wait any longer, I rush inside to see a bustling pub full of elderly people enjoying their meals. I order the pub burger and my pint and head outside curious to hear where the other bikepacker had come from. 
 
 Lachie had the full bike setup, a bunch of bike bags, mountain bike cleets, thick tires, and even some tri bars. I knew I was just about to meet an expert in the field. Offering a seat to his table, we had lunch with him finding out he had just come from Gerringong via the same route we had planned - only to realise his final destination was not Braidwood, but in fact Tasmania.... After exchanging stories and advice, Robin and I left for our afternoon session.
 
-## Endrick River swim
+### Endrick River swim
 Back on gravel, we came across Endrick River, a lovely swimming spot by a small shady forde. Perfect timing, plenty of daytime to spare, so a quick dip was so refreshing! Drying off, we're back on the bikes cycling through Morton National Park overlooking some impressive cliff faces following the Red Ground Track[^3]. After a small mishaps in navigation[^4], we arrived at Piercy's Clearing about 100m from a smaller estuary of Endrick River. Another quick rinse off followed by some Backcountry freeze-dried Satay Chicken and some much needed stretching, we were ready for sleep.
 
 [^3]: Beware this Track is super rocky, like big chunky sharp rocks. I'm surprised we didn't get a flat!
 
 [^4]: Note to self: Always double-check the map, especially after a 35°C day of cycling 🥵
 
-## Some night time reflection
+### Some night time reflection
 Laying on my mat resting my head against my rolled up sleeping bag. The current sleeping arrangements are a cosy 1-person tent with a luxuriously large Sea to Summit sleeping mat. Planning on using my sleeping bag liner and keeping the bag packed up given the a warm-ish night. I reflect through photos and videos of the day feeling my joints relax and recover after a warm days ride.
 
 Listening to the rustling shoulders against the mat searching for the optimal position, I finally get comfortable and wrap myself in the liner. Immediately, I feel the merino radiating keeping me warm and snug and slowly close my eyes to the whispers of crickets and creaking nocturnal animals in the distance. Hopefully I still have all my food in the morning! Good night 😴
 
-# Day 2: Piercy's Clearing to Nowra
+## Day 2: Piercy's Clearing to Nowra
 sweating profusely, and motel magic
 
 Breakfast is always a struggle! Consistent food intake is so so important when it comes to endurance events. So when I know there's a long, sunny day ahead, I'll *attempt* to eat as much as I can for breakfast and essentially every other meal of the day.
@@ -72,7 +72,7 @@ Today's planned menu:
 
 [^5]: Big fan of the flavourless Nude "flavour". Strawberry and Banana & Birthday Cake are pretty good too. I prefer thicker gels, so Gu works well for me.
 
-## Rocky flats & sandy downhills
+### Rocky flats & sandy downhills
 Today's first few kilometres are met with large rocky sections making a very slow start. I'm surprised we didn't get any flats as it was very technical riding on our thin gravel tires. We finally made it out of that "hell-ish"[^6] rocky section to arrive on top of the clouds overlooking the valley we'd just been sleeping in. It's an awesome feeling looking out into the distance on the cliff tops, feeling a slight breeze on your face surrounded by eucalypts watching the fire trail dance along the ridgeline. This was one of the highlights.
 
 [^6]: We met another bikepacker racing in the [Sydney to Summit](https://sydneytosummit.com/) race, who greeted us with "welcome to hell", as he was flowing down the mountain. I think he was in a lot of pain, the kind of pain that is felt once you're truly past type 2 fun. I think I found his Strava after the trip; he made it to Kosciuszko.
@@ -83,7 +83,7 @@ Back into action, we get back onto tarmac for a sweet 75km/h+ speedy descent dow
 
 [^8]: I can't believe there are some people that opted to do Attack of the Buns the opposite direction and would have to climb up that section, absolutely bonkers.
 
-## The Fun Scale - "this is fun, that was fun, that sucked"
+### The Fun Scale - "this is fun, that was fun, that sucked"
 Powering up a mountain is a mental game, a tug of war between pushing through the lactic acid buildup or stopping and catching a break in the shade. The latter is promising, but the ego says otherwise. At some point, the body gets used to the pain, sometimes even reaching the nirvana-state of type 2 fun - miserable in the moment, but awesome in retrospect. Thoughts slowly get filled with echoes of doubt, but also reminders of triumph and motivation[^9]. The grit comes out and you power through sometimes even zoning out or perhaps it's actually zoning in; into a state of mind where the only objective is "push" and hope you don't end up in type 3 fun[^10]. Enough talk about the fun scale, back to the day. 
 
 [^9]: There's definitely a motivation to push through the pain to ensure you maximise your Strava statistics. Anything for the forward-looking expectation of the kudos-induced dopamine hit! ⚡
@@ -94,7 +94,7 @@ Making it up to the top, I see a sun-protected area, whip out my luxury-item - [
 
 [^11]: Lots of Linkin Park
 
-## How good is Chocie Milk ❤️
+### How good is Chocie Milk ❤️
 Getting back into a busy town, especially over the summer weekend, was a little bit of a shock. So much stopping and starting. We get into Nowra CBD and I propose to Robbie, that I quickly run into Coles to grab a 2L Oak chocie milk... Best decision. I had about a whole liter within a few minutes.
 
 Getting to the motel made me really appreciate all the common household services, like a cold shower, a microwave, a bed, an aircon (omg the aircon was immediately turned on upon entering!), a chair and table, fresh drinkable cold water[^12]. What luxuries.
