--- a/blog/bikepacking_attack_of_the_buns/index.qmd
+++ b/blog/bikepacking_attack_of_the_buns/index.qmd
@@ -24,9 +24,7 @@ The plan from here would be to drive to Braidwood, then cycle across 4 days back
 
 ### The Bike Pump...
 
-::: {.callout-note}
 Today was the first day where (almost) everything went to plan - unfortunately a rariety in my bikepacking career so far.
-:::
 
 Awake and ready to start the day, we would make our way straight to [Braidwood Bakery](https://braidwoodbakery.com.au/)[^1]. The bikes and bags are now fully setup and we've taken our first of many 10 second self-timer photos. Robin wants to quickly pump up his tires before we hit the gravel. To our surprise, I realise that I had forgotten to bring the valve adaptor for our pump[^2].
 
@@ -201,8 +199,65 @@ We finished off the day with some local woodfired pizzas and restocking on snack
 
 ## Day 3: Nowra to Griffin's Farm Campground
 
+Day 3 was another hot day. Climbing out of Nowra, we made our way to Kangaroo Valley via Mount Scanzi. This time with newly stocked snacks and a good nights sleep. The morning ride only took a few hours, so we ended up taking a lengthy break in Kangaroo Valley. First, an iced coffee, then a beer, then another beer + a mushroom burger at the local pub.
+
+A great contrast to the previous two days' rides. Dermot and Lyla ended up driving and meeting us for lunch and an afternoon swim under the Kangaroo Valley bridge. A shady and refreshing place to cool off from the steamy sun.
+
+::: {layout="[[1,1], [1,1], [1]]"}
+:::{.cell}
+![You would not believe your eyes. If ten million fireflies. Lit up the world as I fell asleep](photos/day3/bugs.jpg)
+:::
+:::{.cell}
+![Unfortunately, the Mars bar fell out on one of the descents](photos/day3/snacks.jpg)
+:::
+:::{.cell}
+![Unfortunately, I lost the Mars bar on one of the descents 😔](photos/day3/griffins_farm.jpg)
+:::
+:::{.cell}
+![At the top of Mount Scanzi](photos/day3/mt_scanzi.jpg)
+:::
+:::{.cell}
+![Just enough water to call it a bath](photos/day3/river_swim.jpg)
+:::
+:::
+
+The afternoon was another short ride to Griffin's Farm Campground, a lovely open clearing next to a flowing creek in the bottom of the valley. A refreshing evening swim cooldown, another Backcountry meal, and finish off the day with some 500! Thankfully, Robin tossed his headtorch into the distance distracting all the bugs, which created some interesting night photography.
+
+
 
 ## Day 4: Griffin's Farm Campground to Moss Vale to Home
+
+The last day was another shorter ride. A lot of uphill, around 550m consistent climbing, so a lengthy breakfast was necessary. Good thing Lyla brought these extreme electrolyte powder, which we calculated to be about 3 powerade bottles worth. Whilst the morning mist meant we finally had a day without direct sunlight, but this brought with it its own set of challenges... humidity.
+
+We bid our farewells to the (car)packers and began the climb. We cycled past a runner, who apparently started from the top of the hill, this would have been around 1200m of vert over 22km - how wild!. After pressing on and passing Gales Flat Campground, we finally made it to Meryla Pass (the top of the mountain).
+
+A few more country roads and farm properties, we made it back to Moss Vale. Packed up the bikes in the car and grabbed some more food. An iced chocolate, bacon & egg roll, and chips!
+
+::: {layout="[[1,1]]"}
+:::{.cell}
+![We always start the day with some hot hazelnut powder coffee](photos/day4/breakfast.jpg)
+:::
+:::{.cell}
+![Finisher's Reward](photos/day4/finish.jpg)
+:::
+:::
+
+::: {layout="[[1,1], [1,1]]"}
+:::{.cell}
+![Apparently this is a really beautiful view](photos/day4/misty.jpg)
+:::
+:::{.cell}
+![Forests and more forests](photos/day4/forest.jpg)
+:::
+:::{.cell}
+![Griffins Farm Campground](photos/day4/griffins.jpg)
+:::
+:::{.cell}
+![Finish line!](photos/day4/moss_vale.jpg)
+:::
+:::
+
+Overall, the trip was very enjoyable, plenty of laughs, a touch too much heat, but great company and views. Looking forward to the next bikepacking adventure!
 
 ## Appendix Photos
 
@@ -213,3 +268,5 @@ These are the photos that didn't make it...
 ![Cow](photos/appendix/cow.jpg)
 
 ![Burnt Banksia](photos/appendix/banksia.jpg)
+
+![Toilet](photos/appendix/toilet.jpg)
